--- a/StoryBoardApp/local.properties
+++ b/StoryBoardApp/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Dec 01 23:27:19 EST 2020
-sdk.dir=C\:\\Users\\krish\\AppData\\Local\\Android\\Sdk
+#Wed Dec 02 15:41:11 EST 2020
+sdk.dir=C\:\\Users\\ashan\\AppData\\Local\\Android\\Sdk
