--- a/StoryBoardApp/local.properties
+++ b/StoryBoardApp/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Dec 05 20:31:38 EST 2020
-sdk.dir=C\:\\Users\\Owner\\AppData\\Local\\Android\\Sdk
+#Sat Dec 05 22:11:51 EST 2020
+sdk.dir=C\:\\Users\\ashan\\AppData\\Local\\Android\\Sdk
